# paperless-assistant

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.yml  docker-compose.example.yml  pyproject.toml  stage0_triage.py  stage1_reocr.py  stage2_metadata.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-image.yml  sync-wiki.yml
analyses/: ollama-vision-reocr-diagnosis.md  paperless-v3-api-migration.md
docs/: README.md  advanced-modes.md  ai-providers.md  architecture.md  configuration.md  dashboard.md  installation.md  integration-guide.md  phase3-acceptance.md  phase4-acceptance.md  phase5-acceptance.md  phase6-acceptance.md  phase7-acceptance.md  quick-start.md  re-ocr.md  troubleshooting.md  usage.md  webhook.md
scripts/: docs_to_wiki.py
src/paperless_assistant/: __init__.py  activity.py  cli.py  client.py  config.py  container.py  doctor.py  fields.py  hosted.py  hosted_state.py  initcmd.py  metadata.py  obs.py  ocr.py  progress.py  prompts.py  provision.py  report.py  safety.py  spend.py  stages.py  sweep.py  taxonomy.py  transport.py  webhook.py  webui.py  webui_data.py
src/paperless_assistant/providers/: __init__.py  anthropic.py  base.py  catalog.py  hosted_provider.py  ollama.py  openai.py  pricing.py  registry.py
src/paperless_control_plane/: __init__.py  app.py  billing.py  cli.py  dashboard.py  direct.py  inference.py  server.py  store.py
test-stack/: .env.example  README.md  bootstrap.ps1  config.yml  docker-compose.yml  gen-sample.py  teardown.ps1
tests/: conftest.py  fakes.py  test_activity.py  test_activity_capture.py  test_characterization_originals.py  test_characterization_package.py  test_cli.py  test_client.py  test_config_layering.py  test_configurable_settings.py  test_container.py  test_control_plane.py  test_docker.py  test_doctor.py  test_hosted.py  test_live_progress.py  test_ollama_reocr.py  test_phase6_hosted_inference.py  test_phase7_direct_dashboards.py  test_pipeline_integration.py  test_prompt_customization.py  test_providers.py  test_provision.py  test_snapshot_restore.py  test_sweep.py  test_webhook.py  test_webui.py
